# merge_csv_py

./: README.md  pyproject.toml
data/: user01_receipt.csv  user02_receipt.csv  user03_receipt.csv  user04_receipt.csv  user05_receipt.csv  user06_receipt.csv  user07_receipt.csv  user08_receipt.csv  user09_receipt.csv  user10_receipt.csv
db/: receipts.db
py/: db.py  gen.py  merge.py  read_db.py
