[tool.poetry]
name = "merge-csv-py"
version = "0.1.0"
description = ""
authors = ["rtake <rtake1110@gmail.com>"]
readme = "README.md"
packages = [{include = "merge_csv_py"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
